--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.1.2",
+    "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
+    "next": "14.2.14",
     "react": "^18",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-icons": "^5.3.0",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "eslint-config-next": "14.2.14",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5"
   }
 }
