--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "next": "14.2.14",
+    "preline": "^2.5.0",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
