--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.1.2",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "next": "14.2.14",
+    "persona": "^5.1.2",
     "preline": "^2.5.0",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
