--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@mui/material-nextjs": "^6.1.4",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
-    "next": "14.2.14",
+    "next": "^14.2.14",
     "persona": "^5.1.2",
     "preline": "^2.5.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "tw-elements": "^2.0.0"
   },
