--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-paginate": "^8.2.0",
+    "react-responsive-pagination": "^2.9.0",
+    "sass": "^1.81.0",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
