--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "preline": "^2.5.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
