--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-multi-select-component": "^4.3.4",
     "react-paginate": "^8.2.0",
     "react-responsive-pagination": "^2.9.0",
     "sass": "^1.81.0",
