--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-unused-vars": "off",
+    "no-console": "off"
   }
-}
+  }
