--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
     "bootstrap": "^5.3.3",
+    "cookie": "^1.0.2",
     "jwt-decode": "^4.0.0",
     "next": "^14.2.14",
     "persona": "^5.1.2",
