--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material-nextjs": "^6.1.4",
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
+    "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "next": "^14.2.14",
     "persona": "^5.1.2",
