--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && tasc",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,13 +15,14 @@
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
-    "next": "^14.2.14",
+    "next": "^14.2.23",
     "persona": "^5.1.2",
     "preline": "^2.5.0",
     "react": "^18.3.1",
@@ -33,7 +34,8 @@
     "react-multi-select-component": "^4.3.4",
     "react-paginate": "^8.2.0",
     "react-responsive-pagination": "^2.9.0",
-    "sass": "^1.83.1",
+    "sass": "^1.83.4",
+    "socket.io-client": "^4.8.1",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
