--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material-nextjs": "^6.1.4",
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
+    "emoji-picker-react": "^4.12.0",
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "next": "^14.2.23",
