--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "emoji-picker-react": "^4.12.0",
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "next": "^14.2.23",
     "persona": "^5.1.2",
     "preline": "^2.5.0",
@@ -30,6 +31,7 @@
     "react-bootstrap": "^2.10.5",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-multi-select-component": "^4.3.4",
