--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@microsoft/signalr": "^8.0.7",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
+    "@reduxjs/toolkit": "^2.5.1",
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
     "emoji-picker-react": "^4.12.0",
@@ -36,6 +37,7 @@
     "react-icons": "^5.3.0",
     "react-multi-select-component": "^4.3.4",
     "react-paginate": "^8.2.0",
+    "react-redux": "^9.2.0",
     "react-responsive-pagination": "^2.9.0",
     "sass": "^1.83.4",
     "socket.io-client": "^4.8.1",
