--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
+    "moment": "^2.30.1",
     "next": "^14.2.23",
     "persona": "^5.1.2",
     "preline": "^2.5.0",
