added config and packages

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,5 @@
 EXPRESS_SOCKET_APP_URL="http://localhost:3002";
+NEXT_PUBLIC_AZURE_AD_CLIENT_ID=your-client-id
+NEXT_PUBLIC_AZURE_AD_TENANT_ID=your-tenant-id
+NEXT_PUBLIC_AZURE_AD_CLIENT_SECRET=your-client-secret
+NEXT_PUBLIC_AZURE_AD_REDIRECT_URI=http://localhost:3000/api/auth/callback
